<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/quizLayout"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
...
            android:layout_below="@+id/tvCountdown"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/tvQuestion"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="Option 1" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="Option 2" />

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="Option 3"/>

            <RadioButton
                android:id="@+id/radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="Option 4"
                android:layout_below="@+id/radio_group"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RadioGroup>
        <Button
            android:id="@+id/btnconfirm_next"
            android:layout_width="200dp"
            android:background="@drawable/shapelogin"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="Confirm"
            android:layout_below="@+id/radio_group"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>
