...
            <!--android:text="or"-->
            <!--android:id="@+id/tvOr"-->
            <!--android:textSize="10pt"-->
            <!--android:textAlignment="center"/>-->
        <EditText
            android:singleLine="true"
            android:id="@+id/etUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_marginTop="30dp"
...
            android:textColor="@color/hitam"
            android:textColorHint="@color/hitam"
            android:textColorHighlight="@color/hitam"/>

        <EditText
            android:singleLine="true"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20px"
            android:padding="15dp"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Password"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/hitam"
                android:buttonTint="@color/hitam"/>
...
                <!--android:drawableLeft="@drawable/ic_lock_open_black_24dp"-->
                <!--android:drawablePadding="6dp"-->
                <!--android:padding="4dp"/>-->
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:text="Log In"

            android:shadowColor="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20px"
            android:padding="15dp"
...
            android:layout_height="wrap_content"
            android:text="Register Here"
            android:textSize="15sp"
            android:textColor="@color/biru"
            android:clickable="true"/>
        <Button
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/transparan"
            android:onClick="showHelp"
            android:textSize="14sp"
            android:drawableLeft="@drawable/ic_info_outline_black_24dp"
            android:text="Help"
            android:textAllCaps="false"
            android:textColor="@color/custom_progress_orange_progress" />

    </LinearLayout>


...
