...
                android:textStyle="bold"
                android:textSize="10pt"
                android:paddingTop="15dp"
                android:fontFamily="@font/opensans_reguler"
                android:paddingBottom="10dp"/>
            <ImageButton
                android:id="@+id/imgVi2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/judul"
                android:layout_marginTop="10dp"
                android:clickable="true"
...
                android:layout_below="@id/imgVi2"
                android:layout_margin="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imgVi3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/study"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/nameTxt4"
                android:layout_marginTop="10dp"
...
                android:layout_below="@id/imgVi3"
                android:layout_margin="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imgVi4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/watchmovie"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/nameTxt5"
                android:layout_marginTop="10dp"
...
